--- a/error_pages.conf
+++ b/error_pages.conf
@@ -1,30 +1,6 @@
 include snippets/error_pages_content.conf;
 
-location = /403-error.html {
-    root /etc/nginx/html/server-error-pages/_site;
-    internal;
-}
-location = /404-error.html {
-    root /etc/nginx/html/server-error-pages/_site;
-    internal;
-}
-location = /rate-limit-error.html { # 444-error
-    root /etc/nginx/html/server-error-pages/_site;
-    internal;
-}
-location = /500-error.html {
-    root /etc/nginx/html/server-error-pages/_site;
-    internal;
-}
-location = /502-error.html {
-    root /etc/nginx/html/server-error-pages/_site;
-    internal;
-}
-location = /503-error.html {
-    root /etc/nginx/html/server-error-pages/_site;
-    internal;
-}
-location = /504-error.html {
-    root /etc/nginx/html/server-error-pages/_site;
+location = /maintenance-page.html {
+    root /etc/nginx/html/server-error-pages/maintenance-page/html;
     internal;
 }
